--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Formulario de datos personales para capturar información como nombre, apellido, correo, fecha de nacimiento, país de residencia y comentarios." />
+    <meta name="keywords" content="formulario, datos personales, nombre, apellido, correo, fecha de nacimiento, país, comentarios" />
+    <meta name="author" content="Tu Nombre o el de tu empresa" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Formulario de Datos Personales" />
+    <meta property="og:description" content="Rellena el formulario con tus datos personales y comentarios. Recibe una confirmación al enviar el formulario." />
+    <meta property="og:image" content="URL-de-la-imagen-de-previa" />
+    <meta property="og:url" content="URL-de-tu-página" />
+    <meta property="og:type" content="website" />
     <title>Formulario</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -51,7 +60,7 @@
                 </div>
 
                 <div class="campo">
-                    <label for="comments">Comentarios:</label>
+                    <label for="comentarios">Comentarios:</label>
                     <textarea
                     id="comentarios"  
                     name="comments"
