--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
         href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet"
     />
-    <link
-        rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5+04J6k9FCt5FnhnB7cfu2f5ZDoD8KnB+I6CdrW7p"
-        crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
